--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/normalize.css" />
 
+    <link rel="stylesheet" href="./style//utils/normalize.css" />
     <link rel="stylesheet" href="./css/index.css" />
-    <title>Home Page</title>
+
+    <title>Home Cine Club</title>
   </head>
+
   <body>
     <h1>Home</h1>
   </body>
