feat: ajustando o nome do titulo, ajustando o comentario da pagina home #012

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Home Cine Club</title>
+    <title>Cine Club</title>
 
     <!-- Importando a fonte Roboto do google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./style/index.css" />
   </head>
   <body>
-    <!-- Contêiner para o header -->
+    <!-- Contêiner para a Home Page -->
     <div id="home-container"></div>
 
     <!-- Importando o script JavaScript -->
