feat: implementando o html do footer na home Page #012

--- a/src/pages/homePage/homePage.html
+++ b/src/pages/homePage/homePage.html
@@ -39,3 +39,29 @@
     </div>
   </div>
 </header>
+
+<!-- Conteúdo do Main -->
+<div class="main page-container">
+  <main class="main-content">Main</main>
+</div>
+
+<!-- Conteúdo do Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-10">
+        <div class="content-footer">
+          <div class="titulo">
+            <p class="title has-text-light">Cine Club</p>
+          </div>
+          <div class="subtitulo">
+            <p class="subtitle has-text-grey-light">
+              Copyright 2024 CINE CLUB - Guia de Streaming -- todos os direitos
+              reservados.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
