--- a/src/pages/homePage/homePage.html
+++ b/src/pages/homePage/homePage.html
@@ -1,67 +1,71 @@
 <!-- Conteúdo do Header -->
-<header class="header is-fixed-top">
+<header class="header">
   <div class="container">
-    <div class="header-content">
-      <div class="columns">
-        <!-- Logotipo -->
-        <div class="column is-narrow">
-          <div class="navbar-brand logo-container">
-            <img scr="../../assets/images/img_logo.svg" alt=" Logotipo" />
+    <div class="row">
+      <div class="col col-1"></div>
+      <div class="col col-10">
+        <div class="header-content">
+          <div class="logo-container">
+            <img src="../../assets/images/img_logo.svg" alt="Logotipo" />
           </div>
-        </div>
-
-        <!-- Menu -->
-        <div class="column">
-          <nav class="navbar" role="navigation" aria-label="main navigation">
+          <nav class="navbar" role="navigation" aria-label="main">
             <div class="navbar-menu-container">
-              <div class="navbar-start">
-                <a href="#" class="navbar-item home">Home</a>
-                <a href="#" class="navbar-item filmes">Filmes</a>
-                <a href="#" class="navbar-item series">Séries</a>
-                <a href="#" class="navbar-item sobreNos">Sobre Nós</a>
-              </div>
+              <a href="#" class="navbar-item home">Home</a>
+              <a href="#" class="navbar-item filmes">Filmes</a>
+              <a href="#" class="navbar-item series">Séries</a>
+              <a href="#" class="navbar-item sobreNos">Sobre Nós</a>
             </div>
           </nav>
-        </div>
-
-        <!-- Container dos botões -->
-        <div class="column">
-          <div class="navbar-end buttons-container">
-            <button class="button-login is-primary is-margin-left">
-              Login
-            </button>
-            <button class="button-cadastrar is-info custom-border">
-              Cadastrar
-            </button>
+          <div class="buttons-container">
+            <button class="button-login">Login</button>
+            <button class="button-cadastrar">Cadastrar</button>
           </div>
         </div>
       </div>
+      <div class="col col-1"></div>
     </div>
   </div>
 </header>
 
 <!-- Conteúdo do Main -->
 <div class="main page-container">
-  <main class="main-content">Main</main>
+  <main class="main-content">
+    <div class="container">
+      <div class="row">
+        <div class="col col-1"></div>
+        <div class="col col-10">
+          <!-- Seção do Banner Principal -->
+          <section class="banner-section">
+            <figure>
+              <img
+                src="../../assets/images/img_banner.svg"
+                alt="banner principal"
+              />
+            </figure>
+          </section>
+          <!-- Outras seções do main aqui -->
+        </div>
+        <div class="col col-1"></div>
+      </div>
+    </div>
+  </main>
 </div>
 
 <!-- Conteúdo do Footer -->
 <footer class="footer">
   <div class="container">
-    <div class="columns">
-      <div class="column is-10">
+    <div class="row">
+      <div class="col col-1"></div>
+      <div class="col col-10">
         <div class="content-footer">
-          <div class="titulo">
-            <p class="title has-text-light">Cine Club</p>
-          </div>
-          <div class="subtitulo">
-            <p class="subtitle has-text-grey-light">
-              Copyright 2024 CINE CLUB - Guia de Streaming -- todos os direitos
-              reservados.
-            </p>
-          </div>
+          <p class="title">Cine Club</p>
+          <p class="subtitle">
+            Copyright 2024 CINE CLUB - Guia de Streaming -- todos os direitos
+            reservados.
+          </p>
         </div>
       </div>
+      <div class="col col-1"></div>
     </div>
   </div>
 </footer>
