refactor: adicionando e ajustando posicao do simbolo de marca registrada de acordo com o design

--- a/src/pages/homePage/homePage.html
+++ b/src/pages/homePage/homePage.html
@@ -38,7 +38,7 @@
           <section class="banner-section">
             <figure>
               <img
-                src="../../assets/images/img_banner.svg"
+                src="../../assets/images/img_banner_principal.svg"
                 alt="banner principal"
               />
             </figure>
@@ -58,7 +58,7 @@
       <div class="col col-1"></div>
       <div class="col col-10">
         <div class="content-footer">
-          <p class="title">Cine Club</p>
+          <p class="title">Cine Club <span class='trademark-symbol'>&#174</span></p>
           <p class="subtitle">
             Copyright 2024 CINE CLUB - Guia de Streaming -- todos os direitos
             reservados.
