título da pagina.html

--- a/src/pages/homePage/cadatro.html
+++ b/src/pages/homePage/cadatro.html
@@ -1,11 +1,29 @@
-<!-- Conteúdo do Header -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>cadastro</title>
+</head>
+
+<body>
+  <header>
 
 
-<!-- Conteúdo do Main -->
+  </header>
+
+  <main class="page-container">
+    <div class="main-content">
+      <div class="cadastro">
+        <h1>Criar sua conta</h1>
+      </div>
+    </div>
+  </main>
 
 
-<!-- Conteúdo do Footer -->
-<footer class="footer">
+
+  <footer class="footer">
     <div class="container">
       <div class="columns">
         <div class="column is-10">
@@ -24,3 +42,6 @@
       </div>
     </div>
   </footer>
+</body>
+
+</html>
