adicionando cadastro html, css e js

--- a/src/pages/cadastro/cadatro.html
+++ b/src/pages/cadastro/cadatro.html
@@ -1,47 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cadastro</title>
-</head>
-
-<body>
-  <header>
-
-
-  </header>
-
-  <main class="page-container">
-    <div class="main-content">
-      <div class="cadastro">
-        <h1>Criar sua conta</h1>
+<div class="container">
+  <div class="background-overlay"></div>
+  <div class="login-prompt">
+    <div class="login-text">
+      <span class="login-message">Já possui uma conta? </span>
+      <span class="login-link">Faça Login</span>
+    </div>
+    <div class="login-icon">
+      <div class="icon-background"></div>
+    </div>
+  </div>
+  <div class="save-button">
+    <div class="button-background"></div>
+    <div class="button-text">Salvar</div>
+  </div>
+  <div class="preferences">
+    <div class="preference-divider"></div>
+    <div class="preference-items">
+      <div class="preference-item">
+        <div class="genre romance"><span>Romance</span></div>
+        <div class="genre terror"><span>Terror</span></div>
+        <div class="genre thriller"><span>Thriller</span></div>
+        <div class="genre police"><span>Filme Policial</span></div>
+      </div>
+      <div class="preference-item">
+        <div class="genre war"><span>Filmes de Guerra</span></div>
+        <div class="genre mystery"><span>Mistério</span></div>
+        <div class="genre musical"><span>Musical</span></div>
+      </div>
+      <div class="preference-item">
+        <div class="genre sci-fi"><span>Ficção Científica</span></div>
+        <div class="genre fantasy"><span>Fantasia</span></div>
+        <div class="genre western"><span>Faroeste</span></div>
+      </div>
+      <div class="preference-item">
+        <div class="genre espionage"><span>Espionagem</span></div>
+        <div class="genre drama"><span>Drama</span></div>
+        <div class="genre documentary"><span>Documentário</span></div>
+      </div>
+      <div class="preference-item">
+        <div class="genre dance"><span>Dança</span></div>
+        <div class="genre comedy"><span>Comédia</span></div>
+        <div class="genre adventure"><span>Aventura</span></div>
+        <div class="genre action"><span>Ação</span></div>
       </div>
     </div>
-  </main>
-
-
-
-  <footer class="footer">
-    <div class="container">
-      <div class="columns">
-        <div class="column is-10">
-          <div class="content-footer">
-            <div class="titulo">
-              <p class="title has-text-light">Cine Club</p>
-            </div>
-            <div class="subtitulo">
-              <p class="subtitle has-text-grey-light">
-                Copyright 2024 CINE CLUB - Guia de Streaming -- todos os direitos
-                reservados.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="preferences-title">Preferências</div>
+  </div>
+  <div class="personal-info">
+    <div class="input-group">
+      <div class="input-background"></div>
+      <div class="input-text">Confirme sua senha</div>
+      <div class="input-hint">Deve ter no mínimo 8 caracteres</div>
     </div>
-  </footer>
-</body>
-
-</html>
+    <div class="input-group">
+      <div class="input-background"></div>
+      <div class="input-text">Senha</div>
+      <div class="input-hint">Deve ter no mínimo 8 caracteres</div>
+    </div>
+    <div class="input-group">
+      <div class="input-background"></div>
+      <div class="input-text">Email</div>
+      <div class="input-hint">Seu e-mail</div>
+    </div>
+    <div class="input-group">
+      <div class="input-background"></div>
+      <div class="input-text">Nome completo</div>
+      <div class="input-hint">Seu nome completo</div>
+    </div>
+    <div class="personal-info-title">Informações Pessoais</div>
+  </div>
+  <div class="main-title">Criar sua conta</div>
+</div>
