desenvolvendo a secao banner principal, adicionando o espaco das outras secoes

--- a/src/pages/homePage/homePage.html
+++ b/src/pages/homePage/homePage.html
@@ -30,24 +30,43 @@
 <!-- Conteúdo do Main -->
 <div class="main page-container">
   <main class="main-content">
-    <div class="container">
-      <div class="row">
-        <div class="col col-1"></div>
-        <div class="col col-10">
-          <!-- Seção do Banner Principal -->
-          <section class="banner-section">
-            <figure>
-              <img
-                src="../../assets/images/img_banner_principal.svg"
-                alt="banner principal"
-              />
-            </figure>
-          </section>
-          <!-- Outras seções do main aqui -->
+       <!-- Seção banner principal -->
+    <section class="banner-section">
+      <img
+        src="../../assets/images/img_banner_principal.svg"
+        alt="banner principal"
+      />
+      <div class="banner-overlay">
+        <div class="container">
+          <div class="row">
+            <div class="col col-10">
+              <div class="banner-content">
+                <p class='text-banner-ache'>Ache o filme perfeito para assistir!</p>
+                <p class='text-banner-no-cine'>No CineClub você vai achar seus <br/> filmes e séries favoritos de forma simples e rápida!</p>
+                <p class='text-banner-navegue'>Navegue pelo nosso guia e descubra que filmes e séries estão chegando!</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col col-1"></div>
       </div>
-    </div>
+      <div class='banner-button-container'>
+       <button class="button-cadastrar-banner">Cadastre-se</button>
+      </div>
+      <div class='bottom-border'></div>
+    </section>
+
+    <!-- Seção Guia de Streaming -->
+    <section>
+    </section>
+
+    <!-- Seção Top 5 -->
+    <section>
+    </section>
+
+    <!-- Seção Tudo em um lugar -->
+    <section>
+    </section>
+
   </main>
 </div>
 
