feat: desenvolvendo o html da secao guia de streaming

--- a/src/pages/homePage/homePage.html
+++ b/src/pages/homePage/homePage.html
@@ -56,7 +56,51 @@
     </section>
 
     <!-- Seção Guia de Streaming -->
-    <section>
+    <section  class='guia-de-streaming'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col col-1'></div>
+          <div class=' col col-10'>
+            <div class='guia-de-streaming-container'>
+              <p class='guia-de-streaming-title'>Seu guia de Streaming Esta Aqui</p>
+              <p class='guia-de-streaming-subtitle'>Descubra como ver conteúdos novos e populares sem perder tempo</p>
+              <div class='guia-de-streaming-imagens'>
+                <div class='image-container'>
+                  <img src="../../assets/images/img_seu_guia_cadastrar.svg" alt="Mulher com blusa de lã amarela digitando em um notebook">
+                  <div class="image-overlay">
+                    <div class='image-overlay'>
+                      <p class='image-description'>Faça seu cadastro</p>
+                    </div>
+                 </div>
+                </div>
+
+                <div class='image-container'>
+                    <img src="../../assets/images/img_seu_guia_acesse.svg" alt="Mãos digitando em um notebook na tela aparece um streaming em execução">
+                    <div class="image-overlay">
+                      <div class='image-overlay'>
+                        <p class='image-description'>Acesso o guia completo</p>
+                      </div>
+                  </div>
+              </div>
+
+
+             <div class='image-container'>
+                    <img src="../../assets/images/img_seu_guia_aproveite.svg" alt="Mãos digitando em um notebook na tela aparece um streaming em execução">
+                    <div class="image-overlay">
+                      <div class='image-overlay'>
+                        <p class='image-description'>Aproveite</p>
+                      </div>
+                   </div>
+              </div>
+                
+                </div>
+            </div>
+          </div>
+          <div class='col col-1'></div>
+
+        </div>
+
+      </div>
     </section>
 
     <!-- Seção Top 5 -->
