adicionando tela login html e css

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
     <!-- Contêiner para a Home Page -->
     <div id="home-container"></div>
 
+    <!-- Contêiner para a Login Page -->
+    <div id="login-container"></div> 
+
     <!-- Importando o script JavaScript -->
     <script src="./js/homePage.js"></script>
   </body>
