corrigindo cadastro.html

--- a/src/pages/cadastro/cadatro.html
+++ b/src/pages/cadastro/cadatro.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/src/style/index.css" />
   </head>
 
-  <body>
-  
+  <body>  
     <div class="container-geral">
 
       <div class="cadastro-left-section">
@@ -33,7 +32,7 @@
               <div class="title-personal-info">
                 <h1>informações pessoais</h1>
                 <div class="label-nome-completo">
-                  <p>Nome completo</p>
+                  <p>seu nome completo</p>
                   <input class="rectangle-97" type="seu nome completo" />
                 <div>
                   <p>email</p>
@@ -76,7 +75,7 @@
     
             <footer>
               <div>
-                <button class="cadastro-rectangle-footer" type="submit">Salvar</button>
+                <button class="cadastro-rectangle-footer" type="submit">salvar</button>
                 <div class="cadastro-salvar">
                   <p>Já tem cadastro?<a href="#">Faça login aqui.</a></p>
                 </div>          
