fix: ajustando a aparencia do botao de cadastro do banner principal

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,9 @@
             </div>
           </div>
           <div class="banner-button-container">
-            <button class="button-cadastrar-banner">Cadastre-se</button>
+            <a class="button-cadastrar-banner" href="pages/cadastro.html"
+              >Cadastre-se</a
+            >
           </div>
           <div class="bottom-border"></div>
         </section>
@@ -187,6 +189,7 @@
             </div>
           </div>
         </section>
+
         <!-- Seção Guia de Streaming -->
         <section class="guia-de-streaming">
           <div class="container">
