fix: ajustando os links para a pagina de login e cadastro

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                         streaming. Mostraremos onde ver filmes, séries.
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                     <!-- Card 2 -->
@@ -112,7 +112,7 @@
                         acessível em uma única busca.
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                     <!-- Card 3 -->
@@ -129,7 +129,7 @@
                         assistir em todos os seus dispositivos.
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                     <!-- Card 4 -->
@@ -147,7 +147,7 @@
                         serão lançados, esteja sempre atualizado.
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                     <!-- Card 5 -->
@@ -163,7 +163,7 @@
                         compartilhe suas preferências em suas redes sociais
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                     <div class="card-guia-completo">
@@ -179,7 +179,7 @@
                         outros.
                       </p>
                       <div class="card-link-container">
-                        <a class="card-link" href="#">ACESSE</a>
+                        <a class="card-link" href="/pages/login.html">ACESSE</a>
                       </div>
                     </div>
                   </div>
