--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -82,15 +82,13 @@
           <button class="login-btn">Logar</button>
           <span class="signup-text"
             >Não tem uma conta?
-            <a class="signup-link" href="#">Inscreva-se</a></span
+            <a class="signup-link" href="../pages/cadastro.html"
+              >Inscreva-se</a
+            ></span
           >
         </section>
       </div>
     </main>
-
-    <!-- Conteúdo do Footer 
-    <footer class="footer" id="footer"></footer>
-    -->
 
     <script src="../js/login.js"></script>
   </body>
