refactor: adaptando a tela de cadastro para salvar os dados em json server

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -58,6 +58,7 @@
                   id="email"
                   type="text"
                   placeholder="Digite seu email"
+                  required
                 />
                 <img
                   class="icon"
@@ -74,15 +75,16 @@
                 id="password"
                 type="password"
                 placeholder="Digite sua senha"
+                required
               />
             </div>
           </div>
 
           <a class="forgot-password" href="#">Esqueci a senha</a>
-          <button class="login-btn">Logar</button>
+          <button type="submit" class="login-btn">Logar</button>
           <span class="signup-text"
             >Não tem uma conta?
-            <a class="signup-link" href="../pages/cadastro.html"
+            <a class="signup-link" href="../pages/register.html"
               >Inscreva-se</a
             ></span
           >
