--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="banner-button-container">
-            <a class="button-cadastrar-banner" href="pages/cadastro.html"
+            <a class="button-cadastrar-banner" href="pages/register.html"
               >Cadastre-se</a
             >
           </div>
