--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -9,131 +9,110 @@
   <body>
     <main>
       <div class="register-content">
-        <div class="register-horizontal-align">
-          <section class="register-left-section">
-            <div class="register-overlay"></div>
-            <img
-              src="../../assets/images/img_banner_principal.svg"
-              alt="banner-lateral"
-            />
-            <div class="register-logo">
-              <a href="http://localhost:8080/index.html">
-                <img src="../../assets/images/img_logo.svg" alt="logotipo" />
-              </a>
+        <section class="register-left-section">
+          <div class="register-overlay"></div>
+          <div class="register-logo">
+            <a href="http://localhost:8080/index.html">
+              <img src="../../assets/images/img_logo.svg" alt="logotipo" />
+            </a>
+          </div>
+        </section>
+
+        <section class="register-wrapper">
+          <h1>Criar sua conta</h1>
+
+          <form id="registerForm" class="register-inputs">
+            <div class="subtitle">
+              <h2>Informações Pessoais</h2>
             </div>
-          </section>
-
-          <section class="register-wrapper">
-            <h1>Criar sua conta</h1>
-
-            <form
-              id="registerForm"
-              class="register-inputs"
-              onsubmit="registerUser(event)"
-            >
-              <div class="subtitle">
-                <h2>Informações Pessoais</h2>
-              </div>
-              <div class="register-group">
-                <label for="name">Nome</label>
-                <div class="input-icon-wrapper">
-                  <input
-                    class="nome"
-                    id="name"
-                    type="text"
-                    placeholder="Digite seu nome"
-                    autocomplete="name"
-                  />
-                  <img
-                    class="icon"
-                    src="../assets/icons/icon_mail.svg"
-                    alt="icone nome"
-                  />
-                </div>
-              </div>
-              <div class="register-group">
-                <label for="email">Email</label>
-                <div class="input-icon-wrapper">
-                  <input
-                    class="email"
-                    id="email"
-                    type="text"
-                    placeholder="Digite seu email"
-                    autocomplete="email"
-                  />
-                  <img
-                    class="icon"
-                    src="../assets/icons/icon_mail.svg"
-                    alt="icone email"
-                  />
-                </div>
-              </div>
-              <div class="input-group">
-                <label for="password">Senha</label>
+            <div class="input-group">
+              <label for="name">Nome</label>
+              <div class="input-icon-wrapper">
                 <input
-                  class="password"
+                  id="name"
+                  type="text"
+                  placeholder="Digite seu nome"
+                  autocomplete="name"
+                />
+                <img
+                  class="icon"
+                  src="../assets/icons/icon_mail.svg"
+                  alt="icone nome"
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="email">Email</label>
+              <div class="input-icon-wrapper">
+                <input
+                  id="email"
+                  type="text"
+                  placeholder="Digite seu email"
+                  autocomplete="email"
+                />
+                <img
+                  class="icon"
+                  src="../assets/icons/icon_mail.svg"
+                  alt="icone email"
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="password">Senha</label>
+              <div class="input-icon-wrapper">
+                <input
                   id="password"
                   type="password"
                   placeholder="Digite sua senha"
                 />
               </div>
-              <div class="input-group">
-                <label for="confirm-password">Confirmar senha</label>
+            </div>
+            <div class="input-group">
+              <label for="confirm-password">Confirmar senha</label>
+              <div class="input-icon-wrapper">
                 <input
-                  class="confirm-password"
                   id="confirm-password"
                   type="password"
                   placeholder="Confirme sua senha"
                 />
               </div>
+            </div>
 
-              <div class="register-preferences">
-                <div class="inner-wrapper">
-                  <div class="subtitle">
-                    <h2>Preferências</h2>
-                  </div>
-                  <div class="register-buttons-group" id="buttons-group">
-                    <div class="register-chip-group" id="chip-group">
-                      <button class="chip" id="chip">
-                        <p>Ação</p>
-                      </button>
-                      <button class="chip"><p>Aventura</p></button>
-                      <button class="chip"><p>Comédia</p></button>
-                      <button class="chip"><p>Dança</p></button>
-                      <button class="chip">
-                        <p>Documentário</p>
-                      </button>
-                      <button class="chip"><p>Drama</p></button>
-                      <button class="chip"><p>Espionagem</p></button>
-                      <button class="chip"><p>Faroeste</p></button>
-                      <button class="chip"><p>Fantasia</p></button>
-                      <button class="chip">
-                        <p>Ficção Científica</p>
-                      </button>
-                      <button class="chip"><p>Mistério</p></button>
-                      <button class="chip"><p>Policial</p></button>
-                      <button class="chip"><p>Romance</p></button>
-                      <button class="chip"><p>Terror</p></button>
-                      <button class="chip"><p>Thriller</p></button>
-                    </div>
-                  </div>
+            <div class="register-preferences">
+              <div class="inner-wrapper">
+                <div class="subtitle">
+                  <h2>Preferências</h2>
+                </div>
+                <div class="register-buttons-group">
+                  <div
+                    class="register-chip-group"
+                    id="register-chip-group"
+                  ></div>
                 </div>
               </div>
+            </div>
 
-              <section class="register-footer">
-                <button class="register-btn">Salvar</button>
-                <span class="register-signup-text"
-                  >Já possui uma conta?
-                  <a class="register-signup-link" href="../pages/login.html"
-                    >Fazer Login</a
-                  ></span
-                >
-              </section>
-            </form>
-          </section>
-        </div>
+            <section class="register-footer">
+              <button
+                class="register-btn"
+                type="submit"
+                onclick="registerUser(event)"
+              >
+                Salvar
+              </button>
+              <span class="register-signup-text"
+                >Já possui uma conta?
+                <a class="register-signup-link" href="../pages/login.html"
+                  >Fazer Login</a
+                ></span
+              >
+            </section>
+          </form>
+        </section>
       </div>
     </main>
+
+    <div class="toast" id="toast"></div>
     <script src="../js/register.js"></script>
   </body>
 </html>
